[tool.poetry]
name = "python-tree-sandbox"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]
packages = [{ include = "tree_app" }]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
Flask = "^2.0.2"
click = "^8.0.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Admin = "^1.6.0"
treelib = "^1.6.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
